ApiPublicDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-public-deployment
  labels:
    app: api-public
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-public
  template:
    metadata:
      labels:
        app: api-public
    spec:
      containers:
        - name: api-public
          image: longppham5/eshoppublicapi:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
