Database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mcr.microsoft.com/azure-sql-edge:latest
          ports:
            - containerPort: 1433
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
          volumeMounts:
            - name: database-storage
              mountPath: /var/opt/mssql
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: database-pvc
