ApiService.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: api-public
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: api-public
