DatabaseService.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  selector:
    app: database
